The CiCdPipeline resource now DependsOn the CustomBuildActionWithJenkins

--- a/Project 2/template-ci-cd-pipeline.yaml
+++ b/Project 2/template-ci-cd-pipeline.yaml
@@ -263,6 +263,7 @@ Resources:
   CiCdPipeline:
     Description: AWS CodePipeline
     Type: AWS::CodePipeline::Pipeline
+    DependsOn: CustomBuildActionWithJenkins
     Properties:
       Name: !Ref PipelineName
       ArtifactStore:
