Corrected ConfigurationProperties.Name of CustomBuildActionWithJenkins.

--- a/Project 2/template-ci-cd-pipeline.yaml
+++ b/Project 2/template-ci-cd-pipeline.yaml
@@ -241,7 +241,7 @@ Resources:
       Category: Build
       Provider: !Ref JenkinsProvider
       ConfigurationProperties:
-      - Name: !Ref JenkinsProject
+      - Name: ProjectName
         Queryable: true
         Key: true
         Required: true
