--- a/Project 2/template-ci-cd-pipeline.yaml
+++ b/Project 2/template-ci-cd-pipeline.yaml
@@ -518,7 +518,15 @@ Resources:
   SNSTopicForPipelineNotifications:
     Description: SNS Topic for Pipeline Event notifications.
     Type: AWS::SNS::Topic
-    
+
+  SNSTopicSubscription:
+    Description: Create a subscription to the SNS topic. The user has to confirm the subscription.
+    Type: AWS::SNS::Subscription    
+    Properties:
+      TopicArn: !Ref SNSTopicForPipelineNotifications
+      Protocol: email
+      Endpoint: !Ref Email
+
   CloudWatchEventRule:
     Description: CloudWatch Event Rule to catch the Pipeline events (status changes)    
     Type: AWS::Events::Rule
@@ -552,6 +560,11 @@ Metadata:
         Parameters:
           - PipelineName
           - Version
+
+      - Label:
+          default: "Subscription"
+        Parameters:
+          - Email
 
       - Label:
           default: "Jenkins Server"
@@ -606,6 +619,10 @@ Parameters:
     MaxLength: 9
     AllowedPattern: "[0-9A-Za-z_-]+"
     ConstraintDescription: Must be between 1 and 9 characters in length. Allowed characters are numbers, letters, underscore and dash.
+
+  Email:
+    Description: E-mail of the user who needs to be notified for pipeline state changes. The user has to confirm the subscription before receiving e-mails.
+    Type: String
 
   VPCCidrBlock:
     Description: VPC CIDR block for the VPC to be created.
@@ -738,6 +755,21 @@ Outputs:
     Description: Public IP address of the Jenkins Server. This can be used to connect over SSH.
     Value: !GetAtt JenkinsServer.PublicIp
 
+  JenkinsInstanceVpcId:
+    Description: VPC id of the VPC in which the Jenkins Server was launched.
+    Value: !Ref VirtualPrivateCloud  
+
+  JenkinsInstanceSubnet:
+    Description: Subnet id of the subnet in which the Jenkins Server was launched.
+    Value: !Ref PublicSubnet    
+
+  SecurityGroupIds:
+    Description: Security groups associated with the Jenkins instance.
+    Value: 
+      Fn::Join: 
+        - ","
+        - [ !Ref JenkinsSecurityGroup, !Ref SSHOnlySecurityGroup ]
+
   RepositoryCloneUrlHTTP:
     Description: The URL to use for cloning the repository over HTTPS
     Value: !GetAtt CodeCommitRepository.CloneUrlHttp
@@ -745,3 +777,15 @@ Outputs:
   RepositoryCloneUrlSSH:
     Description: The URL to use for cloning the repository over SSH
     Value: !GetAtt CodeCommitRepository.CloneUrlSsh
+
+  PipelineArtifactStore:
+    Description: The bucket name that serves as the artifact store of the pipeline.
+    Value: !Ref CodePipelineArtifactStore
+
+  SNSTopic:
+    Description: The arn of the SNS topic that the pipeline sends the state change notifications.
+    Value: !Ref SNSTopicForPipelineNotifications
+
+  EventRuleId:
+    Description: The CloudWatch Event Rule responsible for sending pipeline state change notifications to the SNS topic.
+    Value: !Ref CloudWatchEventRule
