--- a/Project 2/template-ci-cd-pipeline.yaml
+++ b/Project 2/template-ci-cd-pipeline.yaml
@@ -519,6 +519,23 @@ Resources:
     Description: SNS Topic for Pipeline Event notifications.
     Type: AWS::SNS::Topic
 
+  SNSTopicPolicyForCWEvents:
+    Description: SNS topic policy to let CloudWatch Events send notifications to the topic.
+    Type: AWS::SNS::TopicPolicy
+    Properties:
+      PolicyDocument:
+        Id: SNSTopicPolicyForCWE
+        Version: '2012-10-17'
+        Statement:
+        - Sid: TrustCWEToPublishEventsToMyTopic
+          Effect: Allow
+          Principal:
+            Service: "events.amazonaws.com"
+          Action: sns:Publish
+          Resource: !Sub "${SNSTopicForPipelineNotifications}"
+      Topics:
+      - !Ref SNSTopicForPipelineNotifications
+
   SNSTopicSubscription:
     Description: Create a subscription to the SNS topic. The user has to confirm the subscription.
     Type: AWS::SNS::Subscription    
